# project_youtube_portifolio

./: README.md  dados.csv  dados.xlsx  popular_videos.csv  pyproject.toml  requirements.txt  ~$dados.xlsx
.github/workflows/: main.yml
backend/: start.py
backend/aws/: client.py
backend/contracts/: schema.py
backend/data/: api.py
backend/test/: test.py
backend/youtubeapi/: start.py
